struct-impl-tests/tests/compile_fail/fn_precondition_missing.stderr
error[E0063]: missing field `_custom_must_20point_20to_20_6042_60` in initializer of `read_twice`
  --> $DIR/fn_precondition_missing.rs:12:9
   |
12 |         #[assert_precondition(holds(valid_ptr(ptr), reason = "`ptr` comes from a reference"))]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `_custom_must_20point_20to_20_6042_60`
